[package]
name = "prpgrammers-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.3.0"
once_cell = "1.14.0"
serde = "1.0.144"
reqwest = "0.11.11"
tokio = { version = "1.21.1", features = ["full"] }
